# flutter-opencv-ffi

./: .gitignore  README.md  native_opencv.podspec  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_opencv.cpp  native_opencv.h
android/app/src/main/kotlin/com/elfatah/opencv/flutter_ffi_opencv/: MainActivity.kt
integration_test/: ffi_roundtrip_test.dart  ios_toolchain_probe_test.dart
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/error/: exceptions.dart  failure_codes.dart  failures.dart
lib/core/native/: opencv_native.dart  opencv_result.dart  opencv_status.dart
lib/core/usecases/: usecase.dart
lib/features/image_processing/data/datasources/: opencv_ffi_datasource.dart
lib/features/image_processing/data/models/: processed_image_model.dart
lib/features/image_processing/data/repositories/: image_processing_repository_impl.dart
lib/features/image_processing/domain/entities/: image_metric.dart  processed_image.dart
lib/features/image_processing/domain/repositories/: image_processing_repository.dart
lib/features/image_processing/domain/usecases/: compute_blur_score.dart  convert_to_grayscale.dart  image_bytes_params.dart
lib/features/image_processing/presentation/pages/: grayscale_page.dart
lib/features/image_processing/presentation/providers/: blur_score_controller.dart  grayscale_controller.dart  source_image_controller.dart
lib/features/image_processing/providers/: image_processing_providers.dart
native/: native_opencv.h  native_opencv.podspec
scripts/: build-opencv-ios.sh
test/: widget_test.dart
test/features/image_processing/data/repositories/: image_processing_repository_impl_test.dart
tool/: check_ffi_boundary.sh
